--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -29,27 +29,35 @@
     </nav>
 </header>
 <main>
-    <h1>Lista de Amigos</h1>
-    <div class="friends-list">
-        <ul>
-            <li>Juan Pérez</li>
-            <li>María García</li>
-            <li>Carlos Martínez</li>
-            <li>Laura Sánchez</li>
-            <li>Pedro González</li>
-        </ul>
-    </div>
-
-    <div class="friend-details" id="friend-details">
-        <!-- Aquí se mostrarán los detalles del amigo -->
-        <h2>Detalles del amigo</h2>
-        <div id="details-content">
-            Haz clic en un amigo para ver más información.
+    <div class="d-flex gap-2">
+        <div th:if="${error != null}" class="d-flex flex-column gap-2">
+            <p th:text="${error}"></p>
+            <p>Recomendados</p>
+            <div class="friends-list">
+                <ul th:each="amigo : ${amigosSugeridos}">
+                    <li th:text="${amigo.nombreUsuario}"></li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <button id="button-chat"> Ir al chat</button>
+        <div th:unless="${error != null}" class="d-flex flex-colum gap-2">
+            <p>Tus amigos</p>
+            <div class="friends-list">
+                <ul th:each="amigo : ${amigosSugeridos}">
+                    <li th:text="${amigo.nombreUsuario}"></li>
+                </ul>
+            </div>
         </div>
     </div>
+<!--    <div class="friend-details" id="friend-details">-->
+<!--        &lt;!&ndash; Aquí se mostrarán los detalles del amigo &ndash;&gt;-->
+<!--        <h2>Detalles del amigo</h2>-->
+<!--        <div id="details-content">-->
+<!--            Haz clic en un amigo para ver más información.-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <button id="button-chat"> Ir al chat</button>-->
+<!--        </div>-->
+<!--    </div>-->
 </main>
 <footer class="col-12 py-4 d-flex flex-column gap-2">
     <div class="footerWrapper col-10 mx-auto d-flex align-items-center text-white">
