--- a/src/main/webapp/resources/core/css/partida-truco.css
+++ b/src/main/webapp/resources/core/css/partida-truco.css
@@ -83,14 +83,6 @@ h3 {
     margin-bottom: 20px;
 }
 
-#cartas {
-    grid-area: cartas_jugador;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
 .disposicion-cartas {
     display: flex;
     flex-direction: row;
@@ -102,6 +94,14 @@ h3 {
 /* Tamaño de cartas */
 .disposicion-cartas img {
     width: 65px;
+}
+
+.carta {
+    cursor: pointer;
+}
+
+.carta-seleccionada {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
 
 /* Cartas en juego */
