--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -28,16 +28,11 @@
         </div>
     </nav>
 </header>
-<main>
-    <div class="d-flex gap-2">
-        <div th:if="${error != null}" class="d-flex flex-column gap-2">
-            <p th:text="${error}"></p>
-        </div>
-        <div th:unless="${error != null}" class="d-flex flex-column gap-2">
-            <p>Estas visualizando tus amigos</p>
-        </div>
-        <!--  AMIGOS RECOMENDADOS (SALEN PORQUE NO TIENE AMIGOS)     -->
-        <table class="table table-striped table-bordered">
+<main class="d-flex mx-auto justify-content-center gap-2">
+    <!--  TABLA AMIGOS  -->
+    <div class="d-flex flex-column align-items-center tablaAmigos" th:if="${amigos != null}">
+        <p class="text-white fs-5">Tus amigos</p>
+        <table class="table table-striped table-bordered bg-white" style="height: fit-content;">
             <thead class="table-dark">
             <tr>
                 <th scope="col">Nombre</th>
@@ -45,7 +40,36 @@
             </tr>
             </thead>
             <tbody>
-            <!-- Iterar sobre la lista de amigos (puede ser Thymeleaf u otro motor de plantillas) -->
+            <tr th:each="amigo : ${amigos}">
+                <td th:text="${amigo.id} + ' - ' + ${amigo.nombreUsuario}"></td>
+                <td class="text-center">
+                    <div class="d-flex gap-1">
+                        <button class="btn btn-success btn-sm">Mensaje</button>
+                        <button class="btn btn-danger btn-sm">Eliminar</button>
+                    </div>
+                    <!--                    <form th:action="@{/agregar-amigo}" method="post">-->
+                    <!--                        <input type="hidden" name="idAmigo" th:value="${amigo.id}">-->
+                    <!--                        <button type="submit" class="btn btn-primary btn-sm">Agregar</button>-->
+                    <!--                    </form>-->
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <!--  TABLA RECOMENDADOS  -->
+    <div class="d-flex flex-column align-items-center tablaAmigos">
+        <p class="text-white fs-5" th:if="${error != null}">No tienes amigos, te recomendamos estos.</p>
+        <p class="text-white fs-5" th:unless="${error != null}">Recomendados</p>
+        <table class="table table-striped table-bordered bg-white" style="height: fit-content;">
+            <thead class="table-dark">
+            <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col" class="text-center">
+                    Acción
+                </th>
+            </tr>
+            </thead>
+            <tbody>
             <tr th:each="amigo : ${amigosSugeridos}">
                 <td th:text="${amigo.id} + ' - ' + ${amigo.nombreUsuario}"></td>
                 <td class="text-center">
@@ -53,28 +77,6 @@
                         <input type="hidden" name="idAmigo" th:value="${amigo.id}">
                         <button type="submit" class="btn btn-primary btn-sm">Agregar</button>
                     </form>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <!--  AMIGOS (SALE PORQUE SI TIENE AMIGOS)     -->
-        <table th:unless="${error != null}" class="table table-striped table-bordered">
-            <thead class="table-dark">
-            <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col" class="text-center">Acción</th>
-            </tr>
-            </thead>
-            <tbody>
-            <!-- Iterar sobre la lista de amigos (puede ser Thymeleaf u otro motor de plantillas) -->
-            <tr th:each="amigo : ${amigos}">
-                <td th:text="${amigo.id} + ' - ' + ${amigo.nombreUsuario}"></td>
-                <td class="text-center">
-                    <button class="btn btn-success btn-sm">Mensaje</button>
-<!--                    <form th:action="@{/agregar-amigo}" method="post">-->
-<!--                        <input type="hidden" name="idAmigo" th:value="${amigo.id}">-->
-<!--                        <button type="submit" class="btn btn-primary btn-sm">Agregar</button>-->
-<!--                    </form>-->
                 </td>
             </tr>
             </tbody>
