--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicioDeSesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicioDeSesion.html
@@ -6,47 +6,58 @@
     <title>Inicio de Sesion</title>
 </head>
 <body>
-    <header>
-        <h1 class="texto-bienvenida">¡¡Bienvenido a nuestra plataforma de juegos!!</h1>
-        <div class="imagenes">
-            <img th:src="@{/img/logos/javalogo.webp}" class="headerImage"/>
-            <img th:src="@{/img/logos/springlogo.svg}" class="headerImage"/>
-            <div class="division"></div>
-            <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="headerImage"/></div>
+<header>
+    <h1 class="texto-bienvenida">¡¡Bienvenido a nuestra plataforma de juegos!!</h1>
+    <div class="imagenes">
+        <img th:src="@{/img/logos/javalogo.webp}" class="headerImage"/>
+        <img th:src="@{/img/logos/springlogo.svg}" class="headerImage"/>
+        <div class="division"></div>
+        <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="headerImage"/></div>
+    </div>
+</header>
+
+<form id="formulario" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
+    <h1> Iniciar sesión en Aplicación</h1>
+
+    <p th:if="${error != null}" style="color: red" th:text="'Error, ' + ${error}"></p>
+
+    <label for="username">Correo electrónico</label>
+    <input th:field="*{email}"
+           type="email" id="username"
+           name="username"
+           placeholder="Correo electrónico"
+           value="test@prueba.com"
+           required>
+
+    <label for="password">Contraseña</label>
+    <input th:field="*{password}"
+           type="password"
+           id="password"
+           name="password"
+           placeholder="Contraseña"
+           value="admin"
+            required>
+
+    <button type="submit">Ingresar</button>
+    <a href="">¿Olvidaste tu usuario o contraseña?</a>
+    <hr>
+
+    <p>¿No tenés cuenta aún? <a th:href="@{/nuevo-usuario}" class="link">Registrate</a></p>
+</form>
+
+<!-- Footer -->
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2024 UNLAM. Todos los derechos reservados.</p>
+        <div class="footer-alumnos">
+            <p>Lucas Gavagnin | </p>
+            <p>Gonzalo Ramos | </p>
+            <p>Martin Zaccardo | </p>
+            <p>Franco Vargas | </p>
+            <p>Victoria Croce </p>
         </div>
-    </header>
-
-    <form id="formulario" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
-        <h1> Iniciar sesión en Aplicación</h1>
-
-        <p th:if="${error != null}" style="color: red" th:text="'Error, ' + ${error}"></p>
-
-        <label for="username">Correo electrónico</label>
-        <input th:field="*{email}" type="email" id="username" name="username" placeholder="Correo electrónico" required>
-
-        <label for="password">Contraseña</label>
-        <input th:field="*{password}" type="password" id="password" name="password" placeholder="contraseña" required>
-
-        <button type="submit">Ingresar</button>
-        <a href="">¿Olvidaste tu usuario o contraseña?</a>
-        <hr>
-
-        <p >¿No tenés cuenta aún? <a th:href="@{/nuevo-usuario}" class="link">Registrate</a></p>
-    </form>
-
-    <!-- Footer -->
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2024 UNLAM. Todos los derechos reservados.</p>
-            <div class="footer-alumnos">
-                <p>Lucas Gavagnin |  </p>
-                <p>Gonzalo Ramos |  </p>
-                <p>Martin Zaccardo |  </p>
-                <p>Franco Vargas | </p>
-                <p>Victoria Croce </p>
-            </div>
-        </div>
-    </footer>
+    </div>
+</footer>
 </body>
 
 </html>
