--- a/src/main/webapp/resources/core/css/partida-truco.css
+++ b/src/main/webapp/resources/core/css/partida-truco.css
@@ -20,6 +20,23 @@ header {
         "texto imagenes";
 }
 
+.cartaContainer {
+    width: 75px !important;
+}
+
+.cartaTirarBtn {
+    width: 100%
+}
+
+.carta {
+    width: 100%;
+    cursor: pointer;
+}
+
+.cartaTirada {
+    width: 75px !important;
+}
+
 .texto-bienvenida {
     grid-area: texto;
 }
@@ -50,6 +67,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: fit-content;
 }
 
 h3 {
@@ -63,7 +81,7 @@ h3 {
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     width: 50rem;
-    height: 28rem;
+    height: fit-content;
     position: relative; /* Para posicionar al mazo con absolute*/
 
     display: grid;
@@ -96,10 +114,6 @@ h3 {
     width: 65px;
 }
 
-.carta {
-    cursor: pointer;
-}
-
 .carta-seleccionada {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
@@ -107,21 +121,11 @@ h3 {
 /* Cartas en juego */
 #cartas-en-juego {
     grid-area: cartas_en_juego;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
 }
 
 #mazo {
-    width: 250px;
+    width: 100%;
     cursor: pointer;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 #miCarta, #cartaRival {
