--- a/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
@@ -34,7 +34,7 @@
     <div class="col-10 mx-auto menuJuegoWrapper">
         <!-- Imagen de portada del juego -->
         <img th:src="@{/img/fondo-truco.jpg}" alt="Imagen del juego">
-        <a th:href="@{/comenzar-truco}"> <button> JUGAR</button> </a>
+        <a th:href="@{/partida-truco}"> <button> JUGAR</button> </a>
 
         <!-- Estadísticas del juego -->
         <div class="game-stats">
