Correccion de fallos del truco v3

--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -18,6 +18,9 @@
         <div class="division"></div>
         <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="headerImage"/></div>
     </div>
+    <div>
+        <a th:href="@{/volver-home}">Volver al menu</a>
+    </div>
 </header>
 
 <main>
