--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -78,9 +78,27 @@
         </div>
 
         <div class="botones d-flex flex-wrap gap-1 col-12 justify-content-center" th:if="${partidaIniciada}">
-            <form method="post" th:action="@{/accion-truco}">
-                <button type="submit" class="btn btn-primary">Truco</button>
-            </form>
+            <div>
+                <!-- Botón para cantar truco, si no se ha cantado aún -->
+                <form method="post" th:if="${trucoCantado == null}" th:action="@{/accion-truco}">
+                    <input type="hidden" name="jugador" th:value="${turnoJugador.nombre}" />
+                    <button type="submit" class="btn btn-warning">Cantar Truco</button>
+                </form>
+
+                <!-- Mostrar opciones si se cantó truco -->
+                <div th:if="${trucoCantado}">
+                    <h4 th:text="'Truco cantado por ' + ${jugadorTruco.nombre}"></h4>
+                    <!-- Botones para responder al truco -->
+                    <form method="post" th:action="@{/respuesta-truco}">
+                        <input type="hidden" name="respuesta" value="quiero"/>
+                        <button type="submit" class="btn btn-success">Quiero</button>
+                    </form>
+                    <form method="post" th:action="@{/respuesta-truco}">
+                        <input type="hidden" name="respuesta" value="no quiero"/>
+                        <button type="submit" class="btn btn-danger">No Quiero</button>
+                    </form>
+                </div>
+            </div>
 
             <form method="post" th:action="@{/accion-envido}">
                 <button type="submit" class="btn btn-primary">Envido</button>
@@ -95,6 +113,7 @@
             </form>
         </div>
     </div>
+
     <div class="tabla-datos">
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
