--- a/src/main/webapp/WEB-INF/views/thymeleaf/test.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/test.html
@@ -25,74 +25,39 @@
 
 <main>
     <h3 th:text="${jugador2 != null && jugador1 != null
-    ? 'Jugando ' + jugador1.nombre + '^ VS ' + jugador2.nombre + 'v ' : 'Error. Falta un jugador.'}">
+    ? 'Jugando ' + jugador1.nombre + ' VS ' + jugador2.nombre : 'XD'}">
     </h3>
 
-    <!-- revisar -->
+    <!-- revisar xd -->
     <!--     <h3 th:text="${jugador2 != null && jugador1 != null ? jugador1.nombre + ' VS ' + jugador2.nombre : 'XD'}"></h3>
       <h3 th:text="${jugadas != null ? 'Jugaste: ' + jugadas + ' rondas.' : 'XD'}"></h3>
       <h1>${mensaje}</h1>
       <p>Redirigiendo a la página de inicio...</p> -->
 
-    <div id="mesa" class="gap-2">
-        <!-- CARTAS JUGADOR 1 (arriba) -->
-        <div id="cartas-contrincante" class="gap-1 order-0">
-            <!--BOTONERA -->
-            <div class="d-flex flex-wrap gap-1 col-12 justify-content-center"
-                 th:if="${partidaIniciada}">
-                <!-- NORMALES -->
-                <div class="d-flex gap-1">
-                    <form method="post" th:action="@{/accion}">
-                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
-                        <button type="submit"
-                                class="btn btn-primary"
-                                name="accion"
-                                value="TRUCO">Truco
-                        </button>
-                    </form>
-                    <form method="post" th:action="@{/accion}">
-                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
-                        <button type="submit"
-                                class="btn btn-primary"
-                                name="accion"
-                                value="ENVIDO">Envido
-                        </button>
-                    </form>
-                    <form method="post" th:action="@{/accion}">
-                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
-                        <button type="submit"
-                                class="btn btn-primary"
-                                name="accion"
-                                value="FLOR">Flor</button>
-                    </form>
-                    <form method="post" th:action="@{/accion}">
-                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
-                        <button type="submit"
-                                class="btn btn-primary"
-                                name="accion"
-                                value="MAZO">Mazo</button>
-                    </form>
-                </div>
+    <div id="mesa">
+        <!--    CARTAS JUGADOR 1    -->
+        <div id="cartas-contrincante" class="d-flex flex-wrap gap-2 justify-content-center bor1">
+
+            <div class="botones d-flex flex-wrap gap-1 col-12 justify-content-center bor1" th:if="${partidaIniciada}">
+                <!--     OPCIONES JUGADOR 1      -->
                 <form method="post" th:action="@{/accion-truco}">
                     <button type="submit" class="btn btn-primary">Truco</button>
                 </form>
-                <form method="post" th:action="@{/accion}">
+                <form method="post" th:action="@{/accion-envido}" >
                     <button type="submit"
                             class="btn btn-primary"
-                            th:disabled="${envidoValido == false}">Envido
-                    </button>
-                    <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
-                    <input type="hidden" name="accion" value="2">
+                            th:disabled="${envidoValido == false}">Envido</button>
+                    <input type="hidden" name="jugador" th:value="${jugador1.nombre}"/>
                 </form>
                 <div id="respuestas" th:if="${mostrarRespuestasJ1}">
-                    <form th:action="@{/responder}" method="post">
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="1">Quiero</button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="0">No quiero
-                        </button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="2">Envido</button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="3">Real Envido</button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="4">Falta Envido</button>
-                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
+                    <form th:action="@{/responderEnvido}" method="post">
+                        <button type="submit"
+                                name="respuesta"
+                                value="quiero">Quiero</button>
+                        <button type="submit"
+                                name="respuesta"
+                                value="no quiero">No quiero</button>
+                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}"/>
                     </form>
                 </div>
                 <form method="post" th:action="@{/accion-flor}">
@@ -101,14 +66,13 @@
                 <form method="post" th:action="@{/accion-mazo}">
                     <button type="submit" class="btn btn-primary">Ir al mazo</button>
                 </form>
-                <p class="btn btn-warning" th:text="${tantoJ1}" th:if="${tantoJ1 != null}"></p>
             </div>
 
-            <div class="gap-2 cartasJugadorContainer col-4">
-                <form method="post" th:action="@{/accion-tirar}" th:each="carta : ${cartasJugador1}">
-                    <input type="hidden" name="cartaId" th:value="${carta.id}">
-                    <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
-                    <input type="hidden" name="cartaValor" th:value="${carta.valor}">
+            <div class="gap-2 bor2 cartasJugadorContainer">
+                <form class="bor1" method="post" th:action="@{/accion-tirar}" th:each="carta : ${cartasJugador1}">
+                    <input type="hidden" name="cartaId" th:value="${carta.id}"/>
+                    <input type="hidden" name="jugador" th:value="${jugador1.nombre}"/>
+                    <input type="hidden" name="cartaValor" th:value="${carta.valor}"/>
                     <button type="submit" class="cartaTirarBtn" th:disabled="${turnoJugador == jugador1}">
                         <img th:src="@{${carta.img}}" alt="Carta" th:attr="data-id=${carta.id}" class="carta"/>
                     </button>
@@ -116,60 +80,43 @@
             </div>
         </div>
 
-        <!-- CARTAS TIRADAS -->
-        <div id="cartas-en-juego" class="d-flex flex-wrap order-1">
+        <!--    CARTAS TIRADAS   -->
+        <div id="cartas-en-juego" class="d-flex flex-wrap bor1">
+            <!--  MAZO -->
             <div class="col-4">
                 <a th:href="@{/comenzar-truco}">
                     <img id="mazo" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
                 </a>
             </div>
-            <div id="texto-repartir" th:if="${partidaIniciada == false}" class="col-4">
+            <div id="texto-repartir" th:if="${partidaIniciada == false}">
                 <img th:src="@{/img/cartas-truco/repartir-cartas-v2.png}">
             </div>
-            <div class="col-4 d-flex flex-column flex-wrap gap-1" th:if="${partidaIniciada == true}">
-                <div class="d-flex justify-content-center gap-2" th:if="${cartasTiradasJ1 != null}">
+            <div class="col-8 d-flex flex-column flex-wrap gap-1">
+                <!--  CARTAS J1       -->
+                <div th:if="${cartasTiradasJ1 != null}">
                     <img th:each="carta : ${cartasTiradasJ1}" th:src="@{${carta.img}}" alt="Carta" class="cartaTirada"/>
                 </div>
-                <div class="d-flex justify-content-center gap-2" th:if="${cartasTiradasJ2 != null}">
+                <!--  CARTAS J2   -->
+                <div th:if="${cartasTiradasJ2 != null}">
                     <img th:each="carta : ${cartasTiradasJ2}" th:src="@{${carta.img}}" alt="Carta" class="cartaTirada"/>
                 </div>
             </div>
-            <div class="col-4"></div>
         </div>
 
-        <!-- CARTAS JUGADOR (YO) -->
-        <div id="cartas_jugador" class="order-2 gap-1">
-            <div class="gap-2 cartasJugadorContainer col-4" th:if="${partidaIniciada}">
-                <form method="post" th:action="@{/accion-tirar}" th:each="carta : ${cartasJugador2}">
-                    <input type="hidden" name="cartaId" th:value="${carta.id}">
-                    <input type="hidden" name="jugador" th:value="${jugador2.nombre}">
-                    <input type="hidden" name="cartaValor" th:value="${carta.valor}">
-                    <button type="submit" class="cartaTirarBtn" th:disabled="${turnoJugador == jugador2}">
-                        <img th:src="@{${carta.img}}" alt="Carta" th:attr="data-id=${carta.id}" class="carta"/>
-                    </button>
-                </form>
-            </div>
-            <div class="d-flex flex-wrap gap-1 col-12 justify-content-center" th:if="${partidaIniciada}">
+        <div id="cartas_jugador">
+            <div class="botones d-flex flex-wrap gap-1 col-12 justify-content-center" th:if="${partidaIniciada}">
                 <form method="post" th:action="@{/accion-truco}">
                     <button type="submit" class="btn btn-primary">Truco</button>
                 </form>
-                <form method="post" th:action="@{/accion}">
-                    <button type="submit"
-                            class="btn btn-primary"
-                            th:disabled="${envidoValido == false}">Envido
-                    </button>
-                    <input type="hidden" name="jugador" th:value="${jugador2.nombre}">
-                    <input type="hidden" name="accion" value="2">
+                <form method="post" th:action="@{/accion-envido}" >
+                    <button type="submit" class="btn btn-primary" th:disabled="${envidoValido == false}">Envido</button>
+                    <input type="hidden" name="jugador" th:value="${jugador2.nombre}"/>
                 </form>
                 <div id="respuestas2" th:if="${mostrarRespuestasJ2}">
                     <form th:action="@{/responderEnvido}" method="post">
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="1">Quiero</button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="0">No quiero
-                        </button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="2">Envido</button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="3">Real Envido</button>
-                        <button class="btn btn-warning" type="submit" name="respuesta" value="4">Falta Envido</button>
-                        <input type="hidden" name="jugador" th:value="${jugador2.nombre}">
+                        <button type="submit" name="respuesta" value="quiero">Quiero</button>
+                        <button type="submit" name="respuesta" value="no quiero">No quiero</button>
+                        <input type="hidden" name="jugador" th:value="${jugador2.nombre}"/>
                     </form>
                 </div>
                 <form method="post" th:action="@{/accion-flor}">
@@ -178,8 +125,15 @@
                 <form method="post" th:action="@{/accion-mazo}">
                     <button type="submit" class="btn btn-primary">Ir al mazo</button>
                 </form>
-                <p class="btn btn-warning" th:text="${tantoJ2}" th:if="${tantoJ2 != null}"></p>
             </div>
+            <form class="gap-2 bor2 cartasJugadorContainer" method="post" th:action="@{/accion-tirar}" th:each="carta : ${cartasJugador2}">
+                <input type="hidden" name="cartaId" th:value="${carta.id}"/>
+                <input type="hidden" name="jugador" th:value="${jugador2.nombre}"/>
+                <input type="hidden" name="cartaValor" th:value="${carta.valor}"/>
+                <button type="submit" class="cartaTirarBtn" th:disabled="${turnoJugador == jugador2}">>
+                    <img th:src="@{${carta.img}}" alt="Carta" th:attr="data-id=${carta.id}" class="carta"/>
+                </button>
+            </form>
         </div>
     </div>
 
@@ -247,7 +201,6 @@
                 <th>VALOR</th>
                 <th>NÚMERO</th>
                 <th>PALO</th>
-                <th>VALOR ENVIDO</th>
             </tr>
             </thead>
             <tbody>
@@ -256,25 +209,6 @@
                 <td th:text="${carta.valor}"></td>
                 <td th:text="${carta.numero}"></td>
                 <td th:text="${carta.palo}"></td>
-                <td th:text="${carta.valorEnvido}"></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="tabla-datos">
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-            <tr>
-                <th>EJECUTOR</th>
-                <th>ACCION</th>
-                <th>RESPUESTA</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="a : ${acciones}">
-                <td th:text="${a.jugadorQueEjecuta.nombre}"></td>
-                <td th:text="${a.accion}"></td>
-                <td th:text="${a.respuesta}"></td>
             </tr>
             </tbody>
         </table>
