--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -42,7 +42,7 @@
                  th:if="${partidaIniciada}">
                 <!-- NORMALES -->
                 <div class="d-flex gap-1">
-                    <form method="post" th:action="@{/accion}">
+                    <form method="post" th:action="@{/accion-truco}">
                         <input type="hidden" name="jugador" th:value="${jugador1.nombre}">
                         <button type="submit"
                                 class="btn btn-primary"
@@ -73,9 +73,19 @@
                                 value="MAZO">Mazo</button>
                     </form>
                 </div>
-                <form method="post" th:action="@{/accion-truco}">
-                    <button type="submit" class="btn btn-primary">Truco</button>
-                </form>
+                <div>
+                    <!-- Opciones para aceptar o rechazar el truco, si ya se ha cantado -->
+                    <div th:if="${trucoCantado != null && trucoCantadoPor == jugador2.nombre}">
+                        <form method="post" th:action="@{/accion-truco/aceptar}">
+                            <input type="hidden" name="jugador" th:value="${jugador2.nombre}" />
+                            <button type="submit" class="btn btn-success">Aceptar Truco</button>
+                        </form>
+                        <form method="post" th:action="@{/accion-truco/rechazar}">
+                            <input type="hidden" name="jugador" th:value="${jugador2.nombre}" />
+                            <button type="submit" class="btn btn-danger">Rechazar Truco</button>
+                        </form>
+                    </div>
+                </div>
                 <form method="post" th:action="@{/accion}">
                     <button type="submit"
                             class="btn btn-primary"
@@ -179,6 +189,19 @@
                     <button type="submit" class="btn btn-primary">Ir al mazo</button>
                 </form>
                 <p class="btn btn-warning" th:text="${tantoJ2}" th:if="${tantoJ2 != null}"></p>
+            </div>
+            <div>
+                <!-- Opciones para aceptar o rechazar el truco, si ya se ha cantado -->
+                <div th:if="${trucoCantado != null && trucoCantadoPor == jugador1.nombre}">
+                    <form method="post" th:action="@{/accion-truco/aceptar}">
+                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}" />
+                        <button type="submit" class="btn btn-success">Aceptar Truco</button>
+                    </form>
+                    <form method="post" th:action="@{/accion-truco/rechazar}">
+                        <input type="hidden" name="jugador" th:value="${jugador1.nombre}" />
+                        <button type="submit" class="btn btn-danger">Rechazar Truco</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
